--- a/TKV2026_soubory/sheet012.htm
+++ b/TKV2026_soubory/sheet012.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -45,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=10627 style='border-collapse:
- collapse;table-layout:fixed;width:7986pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=10726 style='border-collapse:
+ collapse;table-layout:fixed;width:8060pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
@@ -180,8 +181,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
+ width:134pt'>
  <col class=xl70 width=105 style='mso-width-source:userset;mso-width-alt:3840;
  width:79pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -353,7 +354,7 @@ else
   <td class=xl70 width=105 style='width:79pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=179 style='width:134pt'></td>
   <td class=xl70 width=105 style='width:79pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -409,7 +410,7 @@ else
   <td class=xl70 width=105 style='width:79pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl179 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2026 - PŘIBYSLAV - 501
   DO</td>
   <td class=xl143>&nbsp;</td>
@@ -1087,7 +1088,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl164 style='border-left:none'>16</td>
+  <td class=xl164 style='border-left:none'>17</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl162>&nbsp;</td>
@@ -1216,11 +1217,11 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>7700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>8250</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>277
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>298
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1354,16 +1355,16 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6200</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>11</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6850</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>223
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>248
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl164 style='border-top:none;border-left:none'>13</td>
+  <td class=xl164 style='border-top:none;border-left:none'>14</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1586,7 +1587,7 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>5200</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>187
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>188
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1811,16 +1812,16 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Růžička Martin
   [CZE069712]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4150</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4400</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>149
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>159
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
-  <td colspan=2 class=xl187 style='border-right:.5pt solid black;border-left:
-  none'>1 090 Kč</td>
+  <td colspan=2 class=xl188 style='border-right:.5pt solid black;border-left:
+  none'>1 173 Kč</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2039,11 +2040,11 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>3950</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>133
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>143
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2177,11 +2178,11 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3350</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>3800</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>121
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>137
   Kč</td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2523,8 +2524,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Landová Aneta [CZE075881]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1800</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>7</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2150</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2624,9 +2625,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Čermák Michal [CZE057910]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2788,9 +2791,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2857,7 +2862,7 @@ else
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl82 style='border-top:none'>Ptáček Radim [CZE071042]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>3</td>
+  <td class=xl82 style='border-top:none;border-left:none'>4</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2954,9 +2959,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3120,9 +3127,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Landová Aneta [CZE075881]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3282,9 +3291,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Růžička Martin
+  [CZE069712]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3435,9 +3447,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Landová Aneta [CZE075881]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -14750,7 +14764,7 @@ else
   <td width=105 style='width:79pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=179 style='width:134pt'></td>
   <td width=105 style='width:79pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
