--- a/TKV2026_soubory/sheet008.htm
+++ b/TKV2026_soubory/sheet008.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -45,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=11456 style='border-collapse:
- collapse;table-layout:fixed;width:8613pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=11581 style='border-collapse:
+ collapse;table-layout:fixed;width:8707pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=208 style='mso-width-source:userset;mso-width-alt:7606;
@@ -177,8 +178,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=205 style='mso-width-source:userset;mso-width-alt:7497;
+ width:154pt'>
  <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
  width:82pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -350,7 +351,7 @@ else
   <td class=xl70 width=109 style='width:82pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=205 style='width:154pt'></td>
   <td class=xl70 width=109 style='width:82pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -406,7 +407,7 @@ else
   <td class=xl70 width=109 style='width:82pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl179 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2026 - DEMLOVKA - 301
   DIDO</td>
   <td class=xl143>&nbsp;</td>
@@ -1084,7 +1085,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl164 style='border-left:none'>16</td>
+  <td class=xl164 style='border-left:none'>17</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl162>&nbsp;</td>
@@ -1213,13 +1214,13 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Novák Radek [CZE049908]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>15</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10650</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>16</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>11300</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>17,1</td>
+  <td class=xl148 style='border-top:none;border-left:none'>16,4</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1347,15 +1348,14 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Folejtar Štěpán
-  [CZE071065]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5500</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Koukal Jiří [CZE061258]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5850</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl164 style='border-top:none;border-left:none'>16</td>
+  <td class=xl164 style='border-top:none;border-left:none'>17</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1573,10 +1573,9 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Procházka Petr
-  [CZE071371]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5500</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Novický Jiří [CZE077824]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5800</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1799,9 +1798,10 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Koukal Jiří [CZE061258]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5400</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Folejtar Štěpán
+  [CZE071065]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5500</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2022,9 +2022,10 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Novický Jiří [CZE077824]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5250</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Procházka Petr
+  [CZE071371]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5500</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2159,15 +2160,15 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Markovičová Lenka
   [CZE072576]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4800</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>11</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5150</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl82 style='border-top:none'>Novák Radek [CZE049908]</td>
-  <td class=xl145 style='border-left:none'>3</td>
+  <td class=xl145 style='border-left:none'>4</td>
   <td class=xl70></td>
   <td class=xl101>&nbsp;</td>
   <td class=xl70></td>
@@ -2622,9 +2623,11 @@ else
   [CZE009044]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1050</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Novák Radek [CZE049908]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2793,9 +2796,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Jenšík Ondřej [CZE057906]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>950</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Novický Jiří [CZE077824]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2966,9 +2971,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Benda Lukáš [CZE026430]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>850</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Koukal Jiří [CZE061258]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3137,9 +3144,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Drda Daniel [CZE079999]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Markovičová Lenka
+  [CZE072576]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3307,9 +3317,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Novák Radek [CZE049908]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Hylmarová Lenka
+  [CZE087519]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3482,9 +3495,12 @@ else
   [CZE072576]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Urbánek Jaroslav
+  [CZE087518]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -4882,9 +4898,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>21</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Barák Ondřej [CZE078469]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2100</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Hylmarová Lenka
+  [CZE087519]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>7</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2250</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5040,10 +5057,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>22</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Medová Marcela
-  [CZE039792]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Barák Ondřej [CZE078469]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2000</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2100</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5200,9 +5216,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>23</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Hylmarová Lenka
-  [CZE087519]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Medová Marcela
+  [CZE039792]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>2000</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5361,8 +5377,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>24</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Urbánek Jaroslav
+  [CZE087518]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>7</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1950</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5519,9 +5536,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>25</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Vrzáček Josef [CZE070728]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1950</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5671,9 +5688,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>26</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Němec Jaromír [CZE049162]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vrzáček Josef [CZE070728]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1800</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1900</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5821,9 +5838,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>27</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Velek Václav [CZE040104]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Němec Jaromír [CZE049162]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1800</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -6122,9 +6139,8 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>29</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Urbánek Jaroslav
-  [CZE087518]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Velek Václav [CZE040104]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1700</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -15341,7 +15357,7 @@ else
   <td width=109 style='width:82pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=205 style='width:154pt'></td>
   <td width=109 style='width:82pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
