--- a/TKV2026_soubory/sheet013.htm
+++ b/TKV2026_soubory/sheet013.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -407,7 +408,7 @@ else
   <td class=xl70 width=91 style='width:68pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl179 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2026 - BRTNICE - CELKOVÉ
   POŘADÍ</td>
   <td class=xl143>&nbsp;</td>
@@ -1085,7 +1086,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl164 style='border-left:none'>16</td>
+  <td class=xl164 style='border-left:none'>17</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl162>&nbsp;</td>
