--- a/TKV2026_soubory/sheet015.htm
+++ b/TKV2026_soubory/sheet015.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -409,7 +410,7 @@ else
   <td class=xl70 width=91 style='width:68pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl179 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2026 - BRTNICE - 501 DO</td>
   <td class=xl143>&nbsp;</td>
   <td class=xl143>&nbsp;</td>
@@ -1086,7 +1087,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl164 style='border-left:none'>16</td>
+  <td class=xl164 style='border-left:none'>17</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl162>&nbsp;</td>
@@ -1818,7 +1819,7 @@ else
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
-  <td colspan=2 class=xl187 style='border-right:.5pt solid black;border-left:
+  <td colspan=2 class=xl188 style='border-right:.5pt solid black;border-left:
   none'>1 339 Kč</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
