--- a/TKV2026_soubory/sheet019.htm
+++ b/TKV2026_soubory/sheet019.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -45,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=10503 style='border-collapse:
- collapse;table-layout:fixed;width:7905pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=10608 style='border-collapse:
+ collapse;table-layout:fixed;width:7984pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=196 style='mso-width-source:userset;mso-width-alt:7168;
@@ -178,8 +179,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=185 style='mso-width-source:userset;mso-width-alt:6765;
+ width:139pt'>
  <col class=xl70 width=102 style='mso-width-source:userset;mso-width-alt:3730;
  width:77pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -351,7 +352,7 @@ else
   <td class=xl70 width=102 style='width:77pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=185 style='width:139pt'></td>
   <td class=xl70 width=102 style='width:77pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -407,7 +408,7 @@ else
   <td class=xl70 width=102 style='width:77pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl179 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2026 - KOVÁRNA - CELKOVÉ
   POŘADÍ</td>
   <td class=xl143>&nbsp;</td>
@@ -1085,7 +1086,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl164 style='border-left:none'>16</td>
+  <td class=xl164 style='border-left:none'>17</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl162>&nbsp;</td>
@@ -1214,13 +1215,13 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Landa Aleš [CZE082580]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>24</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>26</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>11700</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>6,5</td>
+  <td class=xl148 style='border-top:none;border-left:none'>6,6</td>
   <td class=xl68></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1349,13 +1350,13 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Fábera Jiří [CZE075508]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>16</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10300</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>11600</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl164 style='border-top:none;border-left:none'>12</td>
+  <td class=xl164 style='border-top:none;border-left:none'>13</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1574,8 +1575,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Barták Martin [CZE084602]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10100</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>20</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>11000</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1800,8 +1801,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Rosecký Václav
   [CZE084601]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>8300</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>20</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>8900</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2024,8 +2025,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Melichar Tomáš
   [CZE080084]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>7400</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>20</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>8400</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2160,15 +2161,15 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Sedláček Pavel
   [CZE054627]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6100</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>20</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6600</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl82 style='border-top:none'>Fábera Jiří [CZE075508]</td>
-  <td class=xl145 style='border-left:none'>6</td>
+  <td class=xl145 style='border-left:none'>7</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2506,10 +2507,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Barták Vojtěch
-  [CZE084846]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Klíma Kvirín [CZE066638]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>8</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4300</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2608,9 +2608,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Fábera Jiří [CZE075508]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2668,9 +2670,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Doležal Hynek [CZE082925]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3200</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Barták Vojtěch
+  [CZE084846]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>8</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>3900</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2775,9 +2778,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Barták Martin [CZE084602]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2835,9 +2840,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Kříž Miroslav [CZE068544]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3100</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Doležal Hynek [CZE082925]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>3200</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2941,9 +2946,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Klíma Kvirín [CZE066638]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3001,9 +3008,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>10</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Klíma Kvirín [CZE066638]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kříž Miroslav [CZE068544]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3000</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>3100</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3105,9 +3112,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Landa Aleš [CZE082580]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3272,9 +3281,12 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Melichar Tomáš
+  [CZE080084]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3429,9 +3441,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Černý Ondřej [CZE088314]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3583,9 +3597,12 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Sedláček Pavel
+  [CZE054627]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3722,9 +3739,12 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Rosecký Václav
+  [CZE084601]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3779,10 +3799,12 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl78 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
+  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
+  none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>15</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Černý Ondřej [CZE088314]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -14366,7 +14388,7 @@ else
   <td width=102 style='width:77pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=185 style='width:139pt'></td>
   <td width=102 style='width:77pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
