--- a/TKV2026_soubory/sheet029.htm
+++ b/TKV2026_soubory/sheet029.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -78,7 +79,7 @@ else
   <td class=xl70 width=64 style='width:48pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=15 height=58 class=xl178 style='border-right:.5pt solid black;
+  <td colspan=15 height=58 class=xl179 style='border-right:.5pt solid black;
   height:43.5pt'><span style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA
   2026 - ÚVODNÍ TURNAJ - 501 DO</td>
  </tr>
